src/styles/notes.css
.notelist {
    display: inline-flex;
    margin: 10px;
    text-align: center;
    border: solid #eee;
    box-shadow: 0 2px 2px #ccc;
    width: 60%;
    padding: 10px;
    flex-direction: row;
    justify-content: space-around;
    flex-wrap: wrap;
}

.anote {
    width: 150px;
    height: 150px;
    padding: 5px;
    margin: 5px;
    display: flex;
    text-align: center;
    flex-direction: column;
    background-color: #FADB9C;
}

.positionbutton {
    text-align: right;
}

button {
    cursor: pointer;
}

.anote button {
    padding: 3px;
    margin: 3px;
    width: 20px;
    border: none;
    text-align: center;
    background-color: #FADB9C;
    color: #947536;
}

.notelist button {
    width: 17px;
    text-align: center;
}

.anote button:hover {
    background-color: #fdcb6e;
    border-radius: 2px;
}

.addnote:hover {
    background-color: #E5E5E5;
}

.notetext {
    padding: 5px;
    font-family: 'Reenie Beanie', cursive;
    color: darkblue;
}

